Mise en place du slider de presentation, poursuite de la conversion en objets

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <i class="fa fa-times" aria-hidden="true"></i>
         </div>
       </div>
-      <div class="arrow" id="arrowLeft">
+      <div class="arrow" title="Slide precedente" id="arrowLeft">
         <i class="fa fa-arrow-left" aria-hidden="true"></i>
       </div>
       <div id="slides">
@@ -44,13 +44,13 @@
         <div class="slides" id="slide3"></div>
         <div class="slides" id="slide4"></div>
         <div id="sliderButtons">
-          <div class="sliderButtons" id="button-slide1"></div>
-          <div class="sliderButtons" id="button-slide2"></div>
-          <div class="sliderButtons" id="button-slide3"></div>
-          <div class="sliderButtons" id="button-slide4"></div>
+          <div class="sliderButtons" title="Slide n°01" id="button-slide1"></div>
+          <div class="sliderButtons" title="Slide n°02" id="button-slide2"></div>
+          <div class="sliderButtons" title="Slide n°03" id="button-slide3"></div>
+          <div class="sliderButtons" title="Slide n°04" id="button-slide4"></div>
         </div>
       </div>
-      <div class="arrow" id="arrowRight">
+      <div class="arrow" title="Slide suivante." id="arrowRight">
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
       </div>
 		</div>
