--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="slides" id="slide3"></div>
         <div class="slides" id="slide4"></div>
         <div id="sliderButtons">
-          <div class="sliderButtons" title="Slide n°01" id="button-slide1"></div>
+          <div class="sliderButtons button-active" title="Slide n°01" id="button-slide1"></div>
           <div class="sliderButtons" title="Slide n°02" id="button-slide2"></div>
           <div class="sliderButtons" title="Slide n°03" id="button-slide3"></div>
           <div class="sliderButtons" title="Slide n°04" id="button-slide4"></div>
