--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
   	<meta charset="UTF-8">
   	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
   	<meta name="description" content="Service de location et reservations de vélos a Toulouse.">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon.ico">
   	<title>VLooz-Résérvations de vélos à Toulouse</title>
-  	<noscript>
-  		<h5>L'exécution de JavaScript n'est pas autorisée actuellement par le navigateur !
-  		<br>Certaines fonctionnalités ne sont donc pas disponibles.</h5>
-  	</noscript>
   	<script defer="" src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
   	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -21,8 +17,12 @@
   	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <noscript>
+      <h5>L'exécution de JavaScript n'est pas autorisée actuellement par le navigateur !
+      <br>Certaines fonctionnalités ne sont donc pas disponibles.</h5>
+    </noscript>
   	<header>
-  		<h1>Bienvenue sur V.Looz ! Service de locations à Toulouse</h1>
+  		<h1>Bienvenue sur V.Looz !</h1>
   	</header>
   	<div id="content" class="container">
   		<div id="sliderContainer">
@@ -89,7 +89,7 @@
             </div>
           </form>
           <div class="mainContainer" id="canvasesContainer">
-            <canvas id="signature" width="240px" >
+            <canvas id="signature" >
               <p>votre navigateur n'accepte pas Canvas</p>
             </canvas>
             <br>
