--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
   	<meta name="description" content="Service de location et reservations de vélos a Toulouse.">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon.ico">
-  	<title>VLooz-Résérvations de vélos à Toulouse</title>
+  	<title>VLooz-Réservations de vélos à Toulouse</title>
   	<script defer="" src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
   	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -31,7 +31,7 @@
             <i class="fas fa-play"></i>
           </div>
           <div id="stopSlider" class="sliderControls" title="Arreter le defilement.">
-            <i class="fa fa-times" aria-hidden="true"></i>
+            <i class="fas fa-pause" aria-hidden="true"></i>
           </div>
         </div>
         <div class="arrow" title="Slide precedente" id="arrowLeft">
