--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
   	<meta charset="UTF-8">
   	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
-  	<meta name="description" content="Service de location et reservations de vélos a Toulouse.">
+    <title>VLooz-Réservations de vélos à Toulouse</title>
+  	<meta name="description" content="Service de location et réservation de vélos à Toulouse.">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon.ico">
-  	<title>VLooz-Réservations de vélos à Toulouse</title>
   	<script defer="" src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
   	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -25,7 +25,7 @@
   	</header>
   	<div id="content" class="container">
   		<div id="sliderContainer">
-        <a id="anchor" class="sliderControls" title="Passer la presentation." href="#viewContent">GO!</a>
+        <a id="anchor" class="sliderControls" title="Passer la presentation." href="#viewContainer">GO!</a>
         <div id="sliderControls">
           <div id="playSlider" class="sliderControls" title="Lancer le defilement.">
             <i class="fas fa-play"></i>
@@ -53,7 +53,7 @@
           <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </div>
   		</div>
-  		<div id="viewContent" class="row">
+  		<div id="viewContainer" class="row">
         <div id="mapContainer">
           <div id='mapid' ></div>
         </div>
@@ -87,18 +87,17 @@
               <button class="btn btn-info" id="submitForm" title="Verifier le formulaire et signer pour confirmer" type="submit">Signer</button>
             </div>
           </form>
-          <div class="mainContainer" id="canvasesContainer">
+          <div id="canvasesContainer">
             <canvas id="signature" >
               <p>votre navigateur n'accepte pas Canvas</p>
             </canvas>
-            <br>
             <p id="buttons">
               <button class="btn btn-danger" id="clearSignature" title="Revenir en arriere">Annuler</button>
               <button class="btn btn-success" id="submitSignature" title="Confirmer la signature et reserver">Confirmer</button>
             </p>
           </div>
         </div>
-        <div class="mainContainer" id="infosContainer">
+        <div id="infosContainer">
           <div class="infosReservation" id="alerteReservation"></div>
           <div class="infosReservation" id="nomReservation"></div>
           <div class="infosReservation" id="dateReservation"></div>
